--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2923,6 +2923,26 @@
   timestamp = {2018.06.08},
 }
 
+@Book{Beasley1990,
+  title     = {Revising Memory: Women's Fiction and Memoirs in Seventeenth-Century France},
+  publisher = {Rutgers University Press},
+  year      = {1990},
+  author    = {Beasley, F. E.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://books.google.fr/books/about/Revising_Memory.html?id=HxpkQgAACAAJ},
+}
+
+@Book{Beasley2006,
+  title     = {Salons, History, and the Creation of Seventeenth-Century France},
+  publisher = {Ashgate},
+  year      = {2006},
+  author    = {Beasley, F. E.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.routledge.com/Salons-History-and-the-Creation-of-Seventeenth-Century-France-Mastering/Beasley/p/book/9780754653547},
+}
+
 @Article{Beauchamp1965,
   author    = {Beauchamp, M. A.},
   title     = {An improved index of centrality},
@@ -3938,6 +3958,16 @@
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://www.jstor.org/stable/j.ctt1gxp79r},
+}
+
+@Book{Bode2018,
+  title     = {A World of Fiction: Digital Collections and the Future of Literary History},
+  publisher = {University of Michigan Press},
+  year      = {2018},
+  author    = {Bode, K.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.press.umich.edu//8784777},
 }
 
 @InProceedings{Bodrova2014,
@@ -8781,6 +8811,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.journalofdutchliterature.org/index.php/jdl/article/view/103},
 }
 
+@Book{DeJean1991,
+  title     = {Tender Geographies: Women and the Origins of the Novel in France},
+  publisher = {Columbia University Press},
+  year      = {1991},
+  author    = {DeJean, J.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://cup.columbia.edu/book/tender-geographies/9780231062305},
+}
+
 @Article{deJesusHolanda2004,
   author    = {de Jesus Holanda, A. and Torres Pisa, I. and Kinouchi, O. and Souto Martinez, A. and Seron Ruiz, E. E.},
   title     = {Thesaurus as a complex network},
@@ -8995,6 +9035,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1111/j.2517-6161.1977.tb01600.x},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Book{Denis2001,
+  title     = {Le Parnasse galant: institution d’une catégorie littéraire au XVIIe siècle},
+  publisher = {Honoré Champion},
+  year      = {2001},
+  author    = {Denis, D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.honorechampion.com/fr/champion/5812-book-08530356-9782745303561.html},
 }
 
 @Article{Dennerlein2015,
@@ -9736,6 +9786,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://muse.jhu.edu/article/552219},
 }
 
+@Article{Drucker2011,
+  author    = {Drucker, J.},
+  title     = {Humanities Approaches to Graphical Display},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2011},
+  volume    = {5},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {http://www.digitalhumanities.org/dhq/vol/5/1/000091/000091.html},
+}
+
 @Article{DSouza2007,
   author    = {D'Souza, R. M. and Borgs, C. and Chayes, J. T. and Berger, N. and Kleinberg, R. D.},
   title     = {Emergence of tempered preferential attachment from optimization},
@@ -9886,6 +9948,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Brian_Boru_and_the_Battle_of_Clontarf.html?id=7vH4AwAAQBAJ&redir_esc=y},
+}
+
+@Book{Dufour-Maitre2008,
+  title     = {Les Précieuses: naissance des femmes de lettres en France au XVIIe siècle},
+  publisher = {Honoré Champion},
+  year      = {2008},
+  author    = {Dufour-Maître, M.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.honorechampion.com/fr/champion/7046-book-08531802-9782745318022.html},
 }
 
 @Article{Dugue2015a,
@@ -10861,6 +10933,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.25},
 }
 
+@Book{Esmein2004,
+  title     = {Poétiques du roman: Scudéry, Huet, Du Plaisir et autres textes théoriques et critiques du XVIIe siècle sur le genre romanesque},
+  publisher = {Honoré Champion},
+  year      = {2004},
+  author    = {Esmein, C.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.honorechampion.com/fr/champion/6407-book-08531025-9782745310255.html},
+}
+
 @InProceedings{Ester1996,
   author    = {Ester, M. and Kriegel, H.-P. and Sander, J. and Xu, X.},
   title     = {A Density-Based Algorithm for Discovering Clusters in Large Spatial Databases with Noise},
@@ -10972,6 +11054,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {http://clg.wlv.ac.uk/papers/evans-00b.pdf},
+}
+
+@Article{Eve2017,
+  author    = {Eve, M. P.},
+  title     = {Close Reading with Computers: Genre Signals, Parts of Speech, and David Mitchell’s `Cloud Atlas'},
+  journal   = {SubStance},
+  year      = {2017},
+  volume    = {46},
+  number    = {3},
+  pages     = {144},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://muse.jhu.edu/article/676240},
 }
 
 @Article{Everett2005,
@@ -13249,6 +13344,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://dl.acm.org/citation.cfm?id=1611640},
 }
 
+@InCollection{Ginsburg2018,
+  author    = {Ginsburg, M. P.},
+  title     = {Characters and Character Networks in Les Misérables},
+  booktitle = {Approaches to Teaching Hugo's `Les Misérables'},
+  publisher = {Modern Language Association of America},
+  year      = {2018},
+  pages     = {11-20},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.mla.org/Publications/Bookstore/Approaches-to-Teaching-World-Literature/Approaches-to-Teaching-Hugo-s-Les-Miserables},
+}
+
 @Book{Girard1961,
   title     = {Deceit, Desire, and the Novel: Self and Other in Literary Structure},
   publisher = {Johns Hopkins Press},
@@ -13552,6 +13659,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://press.princeton.edu/books/hardcover/9780691639802/acting-and-action-in-shakespearean-tragedy},
 }
 
+@Book{Goldsmith1988,
+  title     = {Exclusive Conversations: The Art of Interaction in Seventeenth-Century France},
+  publisher = {University of Pennsylvania Press},
+  year      = {1988},
+  author    = {Goldsmith, E.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.jstor.org/stable/j.ctv512wpg},
+}
+
 @Article{Goldstein1996,
   author    = {Goldstein, M.},
   title     = {The tragedy of old Capulet: A patriarchal reading of {Romeo} and {Juliet}},
@@ -13638,6 +13755,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.neucom.2014.11.034},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Book{Goodman1996,
+  title     = {The Republic of Letters: A Cultural History of the French Enlightenment},
+  publisher = {Cornell University Press},
+  year      = {1996},
+  author    = {Goodman, D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://books.google.fr/books/about/The_Republic_of_Letters.html?id=c8NjULH3sB0C},
 }
 
 @InCollection{Gorfain1998,
@@ -22890,6 +23017,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.johnsbookshop.com/products/navan-fort-archaeology-and-myth-armagh/},
 }
 
+@Article{Lyons2005,
+  author    = {Lyons, J. D.},
+  title     = {Mlle de Chartres at the Jeweller's Shop: Knowledge and Commerce in La Princesse de Clèves},
+  journal   = {Seventeenth-Century French Studies},
+  year      = {2005},
+  volume    = {27},
+  number    = {1},
+  pages     = {117-126},
+  doi       = {10.1179/c17.2005.27.1.117},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
+@Book{Lyons2005a,
+  title     = {Before Imagination: Embodied Thought from Montaigne to Rousseau},
+  publisher = {Stanford University Press},
+  year      = {2005},
+  author    = {Lyons, J. D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.sup.org/books/title/?id=7313},
+}
+
 @Article{Lyons2007,
   author    = {Lyons, C. E.},
   title     = {Sylvester O'Halloran: Miso-Dolos},
@@ -25382,6 +25532,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://newleftreview.org/II/1/franco-moretti-conjectures-on-world-literature},
 }
 
+@Article{Moretti2000a,
+  author    = {Moretti, F.},
+  title     = {The Slaughterhouse of Literature},
+  journal   = {Modern Language Quarterly},
+  year      = {2000},
+  volume    = {61},
+  number    = {1},
+  pages     = {207-228},
+  doi       = {10.1215/00267929-61-1-207},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
 @Book{Moretti2005,
   title     = {Graphs, Maps, Trees: Abstract Models for Literary History},
   publisher = {Verso},
@@ -27742,6 +27905,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {http://ilpubs.stanford.edu:8090/422/},
 }
 
+@Book{Paige2011,
+  title     = {Before Fiction: The Ancien Régime of the Novel},
+  publisher = {University of Pennsylvania Press},
+  year      = {2011},
+  author    = {Paige, N. D.},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.upenn.edu/pennpress/book/14931.html},
+}
+
 @Article{Paine1969,
   author    = {Paine, R. T.},
   title     = {A Note on Trophic Complexity and Community Stability},
@@ -28547,6 +28720,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.24},
 }
 
+@Book{Peters2018a,
+  title     = {The Written World: Space Literature, and the Chorological Imagination in Early Modern France},
+  publisher = {Northwestern University Press},
+  year      = {2018},
+  author    = {Peters, J. N.},
+  series    = {Rethinking the Early Modern},
+  doi       = {10.2307/j.ctv47w79h},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+}
+
 @Article{Petersen2012,
   author    = {Petersen, A. M. and Tenenbaum, J. N. and Havlin, S. and Stanley, H. E. and Matjaž, P.},
   title     = {Languages cool as they expand: Allometric scaling and the decreasing need for new words},
@@ -29048,6 +29232,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://press.princeton.edu/books/paperback/9780691208411/trust-in-numbers},
+}
+
+@InCollection{Posfay1998,
+  author    = {Pósfay, É.},
+  title     = {Mapping La Princesse de Clèves: A Spatial Approach},
+  booktitle = {Approaches to Teaching Lafayette's `The Princess of Clèves'},
+  publisher = {Modern Language Association of America},
+  year      = {1998},
+  series    = {Approaches to Teaching World Literature},
+  pages     = {102-108},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.mla.org/Publications/Bookstore/Approaches-to-Teaching-World-Literature/Approaches-to-Teaching-Lafayette-s-The-Princess-of-Cleves},
 }
 
 @InProceedings{Post2011,
@@ -29675,6 +29872,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icce.2016.7430726},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Ramsay2005,
+  author    = {Ramsay, S.},
+  title     = {In Praise of Pattern},
+  journal   = {Text Technology},
+  year      = {2005},
+  volume    = {14},
+  number    = {2},
+  pages     = {177-190},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://texttechnology.mcmaster.ca/~texttech/pdf/vol14_2/ramsay14-2.pdf},
 }
 
 @Book{Ramsay2011,
@@ -32478,6 +32688,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@InCollection{Seifert1998,
+  author    = {Seifert, L.},
+  title     = {Masculinity in La Princesse de Clèves},
+  booktitle = {Approaches to Teaching Lafayette's `The Princess of Clèves'},
+  publisher = {Modern Language Association of America},
+  year      = {1998},
+  series    = {Approaches to Teaching World Literature},
+  pages     = {60-67},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.mla.org/Publications/Bookstore/Approaches-to-Teaching-World-Literature/Approaches-to-Teaching-Lafayette-s-The-Princess-of-Cleves},
+}
+
 @Article{Sekara2016,
   author    = {Sekara, V. and Stopczynski, A and Lehmann, S.},
   title     = {Fundamental structures of dynamic social networks},
@@ -34227,6 +34450,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.2517-6161.1974.tb00994.x},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@InCollection{Stone1998,
+  author    = {Stone, H.},
+  title     = {Court Society and Economies of Exchange},
+  booktitle = {Approaches to Teaching Lafayette's `The Princess of Clèves'},
+  publisher = {Modern Language Association of America},
+  year      = {1998},
+  series    = {Approaches to Teaching World Literature},
+  pages     = {47-53},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
+  url       = {https://www.mla.org/Publications/Bookstore/Approaches-to-Teaching-World-Literature/Approaches-to-Teaching-Lafayette-s-The-Princess-of-Cleves},
 }
 
 @InProceedings{Stone2008,
@@ -40221,6 +40457,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.ucpress.edu/book/9780520061842/virginia-woolf-and-the-real-world},
+}
+
+@Book{,
+  title     = {La France galante: essai historique sur une catégorie culturelle, de ses origines jusqu’à la Révolution},
+  publisher = {Presses Universitaires de France},
+  year      = {2008},
+  author    = {Viala, A.},
+  doi       = {10.3917/puf.vial.2008.01},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
